<resources>
    <string name="app_name">Gcu_attendance</string>
    <string name="content_description_media">Cardview 1</string>
    <string name="teacher_name">Atif Ishaq</string>
    <string name="Section">Section E1</string>
    <string name="supporting_text">Programming involves activities such as analysis, developing understanding, generating algorithms...</string>
    <string name="supporting_text5">Programming involves activities such as analysis...</string>

    <string name="action_1">Action1</string>
    <string name="action_2">Action2</string>
    <string name="subject_name">Programming Fundamentals</string>
    <string name="title_activity_navigation_drawer_activity">navigation_drawer_activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>