<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="#00FFFFFF"

    android:id="@+id/card_design"
    android:layout_height="wrap_content"

    >

    <androidx.cardview.widget.CardView

      android:theme="@style/customcard"
        android:id="@+id/subject_design1"
        android:layout_width="190dp"
        android:layout_height="250dp"
app:cardBackgroundColor="@color/colorPrimary"
        app:cardElevation="5dp"

        app:cardCornerRadius="8dp"
        android:fadingEdgeLength="22dp"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:src="@drawable/ic_launcher_background"
                android:scaleType="centerCrop"
                android:contentDescription="@string/content_description_media"
                android:padding="16dp"
                >

                <TextView
                    android:id="@+id/subjectname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"

                    android:text="@string/subject_name"
                    android:textAppearance="?attr/textAppearanceHeadline5"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">


                <TextView
                    android:id="@+id/teacher_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/teacher_name"
                    android:textAppearance="?attr/textAppearanceHeadline6" />

                <TextView
                    android:id="@+id/section_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/Section"
                    android:textStyle="bold"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?android:textColorSecondary" />

                <TextView
                    android:id="@+id/subject_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="sans-serif-light"

                    android:text="@string/supporting_text"
                    android:maxLines="3"
                    android:ellipsize="end"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?android:textColorSecondary" />

            </LinearLayout>




        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>